# ragbandit-core

./: .gitignore  CHANGELOG.md  README.md  ROADMAP_TASKS.md  data_schema_improvements_blueprint.md  possible_code_example.md  pyproject.toml  pytest.ini
examples/: 01_basic_pipeline.py  02_choosing_components.py  03_step_by_step.py  04_cost_tracking.py
notebooks/: component_comparison.ipynb  component_explorer.ipynb  getting_started.ipynb
src/ragbandit/: schema.py
src/ragbandit/config/: llms.py  pricing.py
src/ragbandit/documents/: __init__.py  document_pipeline.py
src/ragbandit/documents/chunkers/: __init__.py  base_chunker.py  document_chunker.py  fixed_size_chunker.py  recursive_markdown_chunker.py  semantic_chunker.py  sentence_chunker.py
src/ragbandit/documents/embedders/: __init__.py  base_embedder.py  cohere_embedder.py  mistral_embedder.py  openai_embedder.py  voyage_ai_embedder.py
src/ragbandit/documents/ocr/: __init__.py  base_ocr.py  datalab_ocr.py  mistral_ocr.py
src/ragbandit/documents/processors/: base_processor.py  footnotes_processor.py  references_processor.py
src/ragbandit/prompt_tools/: __init__.py  footnotes_processor_tools.py  prompt_tool.py  toc_refiner_tools.py
src/ragbandit/utils/: __init__.py  in_memory_log_handler.py  llm_utils.py  mistral_client.py  token_usage_tracker.py
tests/: .env.example  README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_chunkers.py  test_embedders.py  test_ocr.py  test_pipeline.py  test_refiners.py
tests/unit/: __init__.py  test_schema.py
(+6 files in other folders)
