[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbandit-core"
version = "0.1.0"
description = "Core utilities for document processing, RAG configuration, querying, and evaluation."
authors = [
    { name="Martim Chaves", email="martim@ragbandit.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core runtime dependencies
dependencies = [
    "pydantic>=2.11.7",
    "llama-index>=0.12.52",
    "ragas>=0.3.0",
    "cryptography>=44.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/MartimChaves/ragbandit-core"
Documentation = "https://github.com/MartimChaves/ragbandit-core#readme"
Source = "https://github.com/MartimChaves/ragbandit-core"
Issues = "https://github.com/MartimChaves/ragbandit-core/issues"
